# nano-ray

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.claude/scripts/: bump-version.sh
.github/workflows/: ci.yml  publish-crate.yml  publish-pypi.yml
benchmarks/: bench_object_store.py  bench_throughput.py
docs/: design.md
examples/: 01_hello_remote.py  02_pi_estimation.py  03_task_chain.py  04_word_count.py  05_parameter_server.py  06_lineage_recovery.py
python/nano_ray/: __init__.py  __main__.py  _compat.py  actor.py  api.py  dag.py  dashboard.py  driver.py  head.py  node.py  remote_runtime.py  start.py  transport.py
python/nano_ray/_fallback/: object_store.py  ownership.py  scheduler.py
python/nano_ray/libnano_ray_core.dylib.dSYM/Contents/: Info.plist
python/nano_ray/libnano_ray_core.dylib.dSYM/Contents/Resources/Relocations/aarch64/: libnano_ray_core.dylib.yml
rust/nano_ray_core/: Cargo.toml
rust/nano_ray_core/src/: lib.rs  object_store.rs  ownership.rs  scheduler.rs  serializer.rs  types.rs
tests/python/: test_actor.py  test_api.py  test_cluster.py  test_dag.py  test_lineage.py  test_smoke.py
