[package]
name = "nano-ray-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core Rust components for nano-ray distributed computing framework"
repository = "https://github.com/TheR1sing3un/nano-ray"

[lib]
name = "nano_ray_core"
# cdylib: Python extension module loaded by the interpreter at runtime
# rlib: allows cargo test and potential Rust-level reuse
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
dashmap = "6"
bytes = "1"
crossbeam = "0.8"
parking_lot = "0.12"
